--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -13,12 +13,16 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install pytest
     - name: tests
       id: tests
       uses: classroom-resources/autograding-python-grader@v1
       with:
         timeout: 10
-        setup-command: ''
+        test-command: python -m pytest tests/ -v
     - name: Autograding Reporter
       uses: classroom-resources/autograding-grading-reporter@v1
       env:
